_generated-doc/3.0/config/quarkus-security-users-embedded-mp-realm-runtime-config.adoc

:summaryTableId: quarkus-security-users-embedded-mp-realm-runtime-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-security-users-embedded-mp-realm-runtime-config_configuration]]link:#quarkus-security-users-embedded-mp-realm-runtime-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.plain-text]]`link:#quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.plain-text[quarkus.security.users.embedded.plain-text]`

[.description]
--
If the properties are stored in plain text. If this is false (the default) then it is expected that the passwords are of the form HEX( MD5( username ":" realm ":" password ) )

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_PLAIN_TEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_PLAIN_TEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a| [[quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.algorithm]]`link:#quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.algorithm[quarkus.security.users.embedded.algorithm]`

[.description]
--
Determine which algorithm to use. 
This property is ignored if `plainText` is true.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_ALGORITHM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_ALGORITHM+++`
endif::add-copy-button-to-env-var[]
-- a|
`digest-md5`, `digest-sha`, `digest-sha-256`, `digest-sha-384`, `digest-sha-512`, `digest-sha-512-256` 
|`digest-md5`


a| [[quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.users-users]]`link:#quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.users-users[quarkus.security.users.embedded.users]`

[.description]
--
The realm users user1=password++\++nuser2=password2... mapping. See link:#embedded-users[Embedded Users].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_USERS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_USERS+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|`none`


a| [[quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.roles-roles]]`link:#quarkus-security-users-embedded-mp-realm-runtime-config_quarkus.security.users.embedded.roles-roles[quarkus.security.users.embedded.roles]`

[.description]
--
The realm roles user1=role1,role2,...++\++nuser2=role1,role2,... mapping See link:#embedded-roles[Embedded Roles].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_SECURITY_USERS_EMBEDDED_ROLES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_SECURITY_USERS_EMBEDDED_ROLES+++`
endif::add-copy-button-to-env-var[]
--|`Map<String,String>` 
|`none`

|===